tests/NormalTests/paczka1/fuzzy1/18011259.err
Error in line 3: lq8gyfq7 S367 68,63
Error in line 7: 07yeABC S176 3,8
Error in line 8: uwDQ1UIj S269 322,1
Error in line 11: 07yeABC S269 26,3
Error in line 21: lq8gyfq7 S367 5,8
Error in line 25: uwDQ1UIj S176 60,9
Error in line 27: lq8gyfq7 S269 53,6
